--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-
+  <div class="loader">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 </body>
 
 </html>
